--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ packaging==23.0
 pluggy==1.0.0
 psutil==5.9.4
 pytest==7.2.1
+pytest-cov==4.0.0
 pyzmq==25.0.0
 requests==2.28.2
 roundrobin==0.0.4
